# agtv

./: .gitignore  BUILD.ver  CMakeLists.txt  COMPILE  CmakeLists.txt  MINOR.ver  PATCH.ver  ProjectHome.md  README.md  advqsortfilterproxylistmodel.cpp  advqsortfilterproxylistmodel.h  advqsortfilterproxymodel.cpp  advqsortfilterproxymodel.h  agtv.icns  agtv.nsi  agtv.pro  agtv.pro.user.43fef62  agtv.pro.user.4d76dd2  agtv.qrc  agtvdefaultitemdelegate.cpp  agtvdefaultitemdelegate.h  application.rc  changelog.txt  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialoggamebrowser.cpp  dialoggamebrowser.h  dialoggamebrowser.ui  dialoggamestats.cpp  dialoggamestats.h  dialoggamestats.ui  dialoglaunch.cpp  dialoglaunch.h  dialoglaunch.ui  dialogoauthsetup.cpp  dialogoauthsetup.h  dialogoauthsetup.ui  dialogobssettings.cpp  dialogobssettings.h  (+50 more)
agtv-gui/: BUILD.ver  CMakeLists.txt  CmakeLists.txt  MAJOR.ver  MINOR.ver  PATCH.ver  README.md  advqsortfilterproxylistmodel.cpp  advqsortfilterproxylistmodel.h  advqsortfilterproxymodel.cpp  advqsortfilterproxymodel.h  agtv-gui.pro  agtv.icns  agtv.nsi  agtv.qrc  agtv_icon.rc  agtvdefaultitemdelegate.cpp  agtvdefaultitemdelegate.h  application.rc  dialoggamebrowser.cpp  dialoggamebrowser.h  dialoggamebrowser.ui  dialoglaunch.cpp  dialoglaunch.h  dialoglaunch.ui  dialogoauthsetup.cpp  dialogoauthsetup.h  dialogoauthsetup.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  dialogpositioner.cpp  dialogpositioner.h  dialogpositioner.ui  dialogqmediaplayer.ui  dialogshowlogfile.cpp  dialogshowlogfile.h  dialogshowlogfile.ui  dialogvideoplayer.cpp  dialogvideoplayer.h  (+40 more)
agtv-gui/CMakeModules/: NSIS.template.in
agtv-gui/project/: app.pri  developer.pri  developer_hps.pri  developer_nowx.pri  developer_scuq.pri  libcommuni.pri  macosx.pri  msvc.pri  version.pri  vlcqt.pri  win32.pri
deployer/: deployer.pro  main.cpp
scripts/: compile.bat  compile_prompt.bat  set_version.bat
